--- a/oblig/Effi.CSS
+++ b/oblig/Effi.CSS
@@ -1,184 +1,127 @@
-
-#Effi {
-   font-size:2vh; 
-     position: absolute;
-    display: grid;
-    grid-template-rows:auto;
-    grid-template-columns:auto;
-    grid-column:auto;
-     }
 .Efficantcy{
     border: 2px solid black;
-    font-size:2vh; 
+    font-size: 2vw;
+    text-align: center;
      position: absolute;
     display: grid;
     text-align: center;
     background-color: yellowgreen;
-    top:80vh;
-    height:07.1vh;
-    width:39.4vw;
+    top:0.1vh;
+    height:9.9%;
+   width:100%;
+}
+
+.Effi-container{
+    text-align: center;
+    display: grid;
+    position: absolute;
+    justify-content: center;
+    background-color: yellowgreen;
+    left:25.1vw;
+    width:100%;
+    height:85.1%;   
+    font-size:2.3vh;
+    font-weight: bold;
+    
 }
 .tai-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
     display: grid;
     text-align: center;
-    background-color: yellowgreen;
+    border: 1px solid black;
 }
 .nin-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
     display: grid;
-    text-align: center;
-    background-color: yellowgreen;
+    text-align: center;;
+    border: 1px solid black;
 }
 .buki-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
     display: grid;
+    border: 1px solid black;
     text-align: center;
-    background-color: yellowgreen;
 }
 .Stam-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
     display: grid;
+      border: 1px solid black;
     text-align: center;
-    background-color: yellowgreen;
 }
 .ele-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
     display: grid;
+      border: 1px solid black;
     text-align: center;
-    background-color: yellowgreen;
 }
 .gen-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
     display: grid;
+      border: 1px solid black;
     text-align: center;
-    background-color: yellowgreen;
 }
 .atk-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
     display: grid;
+      border: 1px solid black;
     text-align: center;
-    background-color: yellowgreen;
 }
 .strike-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
     display: grid;
+      border: 1px solid black;
     text-align: center;
-    background-color: yellowgreen;
 }
 .hit-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
     display: grid;
+      border: 1px solid black;
     text-align: center;
-    background-color: yellowgreen;
 }
 .reroll-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
     display: grid;
+      border: 1px solid black;
     text-align: center;
-    background-color: yellowgreen;
-}
-.boost-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
-    display: grid;
-    text-align: center;
-    background-color: yellowgreen;
-}
-.buki-rec-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
-    display: grid;
-    text-align: center;
-    background-color: yellowgreen;
-}
-.gen-act-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
-    display: grid;
-    text-align: center;
-    background-color: yellowgreen;
-}
-.gen-mastery-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
-    display: grid;
-    text-align: center;
-    background-color: yellowgreen;
-}
-.gen-rec-effi{
-    border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
-    display: grid;
-    text-align: center;
-    background-color: yellowgreen;
 }
 .focus-effi{
-      border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
     display: grid;
+      border: 1px solid black;
     text-align: center;
-    background-color: yellowgreen;
 }
 
-.focus-burst{
-      border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
+.focusburst-effi{
     display: grid;
+      border: 1px solid black;
     text-align: center;
-    background-color: yellowgreen;
 }
 
-.focus-range{
-      border-left:2px solid black;
-    border-bottom: 1px solid black;
-    font-size:2vh; 
-     position: absolute;
+.focusrange-effi{
+    display: grid;
+      border: 1px solid black;
+    text-align: center;
+}
+.boost-effi{
+    display: grid;
+      border: 1px solid black;
+    text-align: center;
+}
+.buki-rec-effi{
+    display: grid;
+      border: 1px solid black;
+    text-align: center;
+}
+
+.gen-act-effi{
+    display: grid;
+      border: 1px solid black;
+    text-align: center;
+}
+.gen-mastery-effi{
+      border: 1px solid black;
     display: grid;
     text-align: center;
+}
+.gen-rec-effi{
+    display: grid;
+      border: 1px solid black;
+    text-align: center;
+}
+
+.endu-effi {
+    display: grid;
+      border: 1px solid black;
+    text-align: center;
     background-color: yellowgreen;
+    
 }
