--- a/oblig/GridContainers.css
+++ b/oblig/GridContainers.css
@@ -1,46 +1,65 @@
-.Ninjasheet1-containers {
-  display:inline-grid;
-  grid-template-columns:  25% 25% 25% 25%;
-  grid-template-rows: 8.8% 8.8% 8.8% 8.8% 8.8% 8.8% 8.8% 8.8% 8.8% 8.8% 8.8% 8.8%;
+.grid-container {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 33.33% 33.33% 33.33%;
   gap: 0px 0px;
   grid-template-areas:
-    "Ninjainfo1-containers Ninjainfo1-containers Ninjainfo1-containers Ninjainfo1-containers"
-    "Ninjainfo1-containers Ninjainfo1-containers Ninjainfo1-containers Ninjainfo1-containers"
-    "abg Seal Seals TB"
-    "fq Item-container Item-container BL-containers"
-    "input-container The-Stats The-Stats Efficantcy"
-    "input-containers txt Stats Effi-container"
-    "input-containers txt Stats Effi-container"
-    "input-containers txt Stats Effi-container"
-    "input-containers txt Stats Effi-container"
-    "input-containers txt Stats Effi-container"
-    "Dmgout-containers Dmgout-containers Dmgout-containers Dmgout-containers"
-    "Dmgout-containers Dmgout-containers Dmgout-containers Dmgout-containers";
+    "Ninjasheet1-containers Ninjasheet1-containers Ninjasheet1-containers Ninjasheet1-containers"
+    "Ninjasheet1-containers Ninjasheet1-containers Ninjasheet1-containers Ninjasheet1-containers"
+    "Ninjasheet1-containers Ninjasheet1-containers Ninjasheet1-containers Ninjasheet1-containers";
 }
+
+.Ninjasheet1-containers {
+  display: grid;
+  grid-template-columns:  12.2% 29.266% 29.266% 29.266%;
+  grid-template-rows: 20% 20% 20% 20% 20%;
+  gap: 0px 0px;
+  grid-template-areas:
+    "ninja Ninjainfo1-containers Ninjainfo1-containers Ninjainfo1-containers "
+    "ninja a1 a1 a1"
+    "a2 a2 a2 a2"
+    "StatRelated StatRelated StatRelated StatRelated"
+    "Dmgout-containers Dmgout-containers Dmgout-containers Dmgout-containers";
+  grid-area: Ninjasheet1-containers;
+}
+
 
 .Ninjainfo1-containers {
-  display:inline-grid;
-  grid-template-columns: 33.3% 33.3% 33.3%;
-  grid-template-rows: 50%r 50%;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 100%;
   gap: 0px 0px;
   grid-template-areas:
-    "ninjaImg theninja position"
-    "er LVLbox Penalty-containers";
+    "a4 a3";
   grid-area: Ninjainfo1-containers;
-
-
-
 }
-
-.position { grid-area: position; }
-
-.theninja {
+.a3 {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows:  0.5fr 0.5fr;
+  grid-template-columns: 100%;
+  grid-template-rows: 30% 70%;
+  gap: 0px 0px;
+  grid-template-areas:
+    "position"
+    "Penalty-containers";
+  grid-area: a3;
+}
+.a4 {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 33.33% 33.33% 33.33%;
   gap: 0px 0px;
   grid-template-areas:
     "hei"
+    "theninja"
+    "LVLbox";
+  grid-area: a4;
+}
+.theninja {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows:  50% 50%;
+  gap: 0px 0px;
+  grid-template-areas:
     "ID"
     "NinjaName";
   grid-area: theninja;
@@ -52,39 +71,14 @@
 
 .NinjaName { grid-area: NinjaName; }
 
-.ninjaImg { grid-area: ninjaImg; }
-.botox {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr ;
-  gap: 0px 0px;
-  grid-template-areas:
-  "fq Item-container Item-container BL-containers";
- 
-}
-.er {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 0.5fr 0.5fr;
-  gap: 0px 0px;
-  grid-template-areas:
-    "Cost"
-    "Chakra";
-  grid-area: er;
-}
-
-.Cost { grid-area: Cost; }
-
-.Chakra { grid-area: Chakra; }
-
 .LVLbox {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 0.5fr 0.5fr;
+  grid-template-columns: 100%;
+  grid-template-rows: 55% 45%;
   gap: 0px 0px;
   grid-template-areas:
-    "button button button"
-    "LVL LVL LVL";
+    "button"
+    "LVL";
   grid-area: LVLbox;
 }
 
@@ -92,10 +86,13 @@
 
 .LVL { grid-area: LVL; }
 
+
+.position { grid-area: position; }
+
 .Penalty-containers {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 0.25fr 0.25fr 0.25fr 0.25fr;
+  grid-template-columns: 100%;
+  grid-template-rows: 25% 25% 25% 25%;
   gap: 0px 0px;
   grid-template-areas:
     "is-off"
@@ -114,102 +111,298 @@
 .pen { grid-area: pen; }
 
 
-.fq {
+
+
+.ninjaImg { grid-area: ninjaImg; }
+
+.er {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 0.5fr 0.5fr;
+  grid-template-columns: 100%;
+  grid-template-rows: 50% 50%;
   gap: 0px 0px;
   grid-template-areas:
-    "Fixed1"
-    "Fixed2";
-  grid-area: fq;
+    "Cost"
+    "Chakra";
+  grid-area: er;
 }
 
-.Fixed1 {
+.Cost { grid-area: Cost; }
+
+.Chakra { grid-area: Chakra; }
+
+.a1 {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 0.5fr 0.5fr;
+  grid-template-columns: 20% 20% 22.5% 22.5%;
+  grid-template-rows:5%;
   gap: 0px 0px;
   grid-template-areas:
-    "quarter1"
-    "NY";
-  grid-area: Fixed1;
+    " er fq seals seals";
+  grid-area: a1;
 }
 
-.quarter1 { grid-area: quarter1; }
+.fq { grid-area: fq; }
 
-.NY { grid-area: NY; }
-
-.Fixed2 {
+.seals {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 0.5fr 0.5fr;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 100%;
   gap: 0px 0px;
   grid-template-areas:
-    "quarter2"
-    "YN";
-  grid-area: Fixed2;
+    "SealTag seal";
+  grid-area: seals;
 }
 
-.quarter2 { grid-area: quarter2; }
+.SealTag { grid-area: SealTag; }
 
-.YN { grid-area: YN; }
+.seal { grid-area: seal; }
+
+.a2 {
+  display: grid;
+  grid-template-columns: 10% 45% 45%;
+  grid-template-rows: 50% 50%;
+  gap: 0px 0px;
+  grid-template-areas:
+    "bonusstat Item-container BL-container"
+    "bonusstat Item-container BL-container";
+  grid-area: a2;
+}
 
 .Item-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 33.33% 33.33% 33.33%;
   gap: 0px 0px;
   grid-area: Item-container;
 }
 
-.itemTg1 { grid-area: 1 / 1 / 2 / 2; }
+.item1 { grid-area: 1 / 1 / 2 / 2; }
 
-.itemTg2 { grid-area: 2 / 1 / 3 / 2; }
+.item2 { grid-area: 2 / 1 / 3 / 2; }
 
-.itemTg3 { grid-area: 3 / 1 / 4 / 2; }
+.item3 { grid-area: 3 / 1 / 4 / 2; }
 
-.item1 { grid-area: 1 / 2 / 2 / 3; }
+.itemTg1 { grid-area: 1 / 2 / 2 / 3; }
 
-.item2 { grid-area: 2 / 2 / 3 / 3; }
+.itemTg2 { grid-area: 2 / 2 / 3 / 3; }
 
-.item3 { grid-area: 3 / 2 / 4 / 3; }
+.itemTg3 { grid-area: 3 / 2 / 4 / 3; }
 
-.ItemTg { grid-area: 1 / 1 / 4 / 2; }
+.ItemEq { grid-area: 1 / 1 / 4 / 2; }
 
-.ItemEq { grid-area: 1 / 2 / 4 / 3; }
+.ItemTg { grid-area: 1 / 2 / 4 / 3; }
 
-.BL-containers {
+.BL-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
   gap: 0px 0px;
   grid-template-areas:
-    "bloodline Blood-line"
-    "bloodlinelvl Blood-Line-LvL";
-  grid-area: BL-containers;
+    "bloodline blood-line"
+    "bloodlinelvl blood-line-LvL";
+  grid-area: BL-container;
 }
 
 .bloodline { grid-area: bloodline; }
 
-.Blood-line { grid-area: Blood-line; }
-
-.Blood-Line-LvL { grid-area: Blood-Line-LvL; }
+.blood-line { grid-area: blood-line; }
 
 .bloodlinelvl { grid-area: bloodlinelvl; }
 
+.blood-line-LvL { grid-area: blood-line-LvL; }
+
+.bonusstat {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 50% 50%;
+  gap: 0px 0px;
+  grid-template-areas:
+    "qq"
+    "used";
+  grid-area: bonusstat;
+}
+
+.qq { grid-area: qq; }
+
+.used { grid-area: used; }
+
+.StatRelated {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 50% 50%;
+  gap: 0px 0px;
+  grid-template-areas:
+    "input-container The-Stats The-Stats Efficantcy"
+    "input-containers txt Stats Effi-container";
+  grid-area: StatRelated;
+}
+
+.The-Stats { grid-area: The-Stats; }
+
+.Efficantcy { grid-area: Efficantcy; }
+
 .input-container { grid-area: input-container; }
+
+.txt {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263%;
+  gap: 0px 0px;
+grid-template-areas:
+"Taijutsu"
+"Ninjutsu"
+"Bukijutsu"
+"Stamina"
+"Elemental"
+"Genjutsu"
+"Attack"
+"Crittical-strike"
+"Crittical-hit"
+"Re-roll"
+"Focus-pew"
+"Focus-burst-pew"
+"Focus-range-pew"
+"Bukijutsu-Recovery"
+"Bukijutsu-Boost"
+"Genjutsu-Activation"
+"Genjutsu-Mastery"
+"Genjutsu-Recovery"
+"Endurance";
+grid-area: txt;
+}
+
+
+.Taijutsu { grid-area: Taijutsu; }
+
+.Ninjutsu { grid-area:Ninjutsu; }
+
+.Bukijutsu { grid-area: Bukijutsu; }
+
+.Stamina { grid-area:Stamina ; }
+
+.Elemental { grid-area:Elemental; }
+
+.Genjutsu { grid-area:genjutsu; }
+.Attack { grid-area:Attack; }
+
+.Crittical-strike { grid-area:Crittical-strike; }
+
+.Crittical-hit { grid-area:Crittical-hit; }
+
+.Re-roll { grid-area:Re-roll; }
+
+.Focus-pew { grid-area:Focus-pew; }
+
+.focus-burst-pew { grid-area:Focus-Burst-pew; }
+
+.Focus-range-pew { grid-area: focus-range; }
+
+.Bukijutsu-Recovery { grid-area:Bukijutsu-Recovery ; }
+
+.Bukijutsu-Boost { grid-area:Bukijutsu-Boost ; }
+
+
+.Genjutsu-Activation { grid-area:Genjutsu-Activation ; }
+
+.Genjutsu-Mastery { grid-area: Genjutsu-Mastery; }
+
+.Genjutsu-Recovery { grid-area:Genjutsu-Recoveryc; }
+
+.Endurance { grid-area:Endurance; }
+
+.Stats {
+  display: grid;
+  grid-template-columns:100%;
+  grid-template-rows: 34% 66%;
+  gap: 0px 0px;
+  grid-template-areas:
+    "Primestat-containers"
+    "Secondary-containers";
+  grid-area: Stats;
+}
+
+.Primestat-containers {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 80%;
+  gap: 0px 0px;
+  grid-template-areas:
+    "StatNames";
+  grid-area: Primestat-containers;
+}
+
+ .StatNames { grid-area: StatNames; 
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 6.236% 6.236% 6.236% 6.236% 6.236% 6.236%;
+  gap: 0px 0px;
+  grid-template-areas:
+  "StatNames"
+  "StatNames"
+  "StatNames"
+  "StatNames"
+  "StatNames"
+  "StatNames";
+grid-area: StatNames;
+} 
+
+.Secondary-containers {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 8.1%  8.1%  8.1%  8.1%  8.1%  8.1%  8.1%  8.1%  8.1%  8.1%  8.1%  8.1%  8.1%;
+  gap: 0px 0px;
+  grid-template-areas:
+  "Atk"
+  "Strike"
+  "Hit"
+  "Re-Roll"
+  "Focus"
+  "Focus-Burst"
+  "Focus-Range"
+  "Buki-Boost"
+  "Buki-Rec"
+  "Gen-Act"
+  "Gen-Mastery"
+  "Gen-Rec"
+  "Endu";
+  grid-area: Secondary-containers;
+}
+
+.Atk { grid-area: Atk; }
+
+.Strike { grid-area: Strike; }
+
+.Hit { grid-area: Hit; }
+
+.Re-Roll { grid-area: Re-Roll; }
+
+.Focus { grid-area: Focus; }
+
+.Focus-Burst { grid-area: Focus-Burst; }
+
+.Focus-Range { grid-area: Focus-Range; }
+
+.Buki-Boost { grid-area: Buki-Boost; }
+
+.Buki-Rec { grid-area: Buki-Rec; }
+
+.Gen-Act { grid-area: Gen-Act; }
+
+.Gen-Mastery { grid-area: Gen-Mastery; }
+
+.Gen-Rec { grid-area: Gen-Rec; }
+
+.Endu { grid-area: Endu; }
 
 .Effi-container {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 100%;
+  grid-template-rows: 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263%;
   gap: 0px 0px;
   grid-template-areas:
     "tai-effi"
     "nin-effi"
     "buki-effi"
-    "Stam-effi"
+    "stam-effi"
     "ele-effi"
     "gen-effi"
     "atk-effi"
@@ -234,7 +427,7 @@
 
 .buki-effi { grid-area: buki-effi; }
 
-.Stam-effi { grid-area: Stam-effi; }
+.stam-effi { grid-area: stam-effi; }
 
 .ele-effi { grid-area: ele-effi; }
 
@@ -266,80 +459,10 @@
 
 .endu-effi { grid-area: endu-effi; }
 
-.Efficantcy { grid-area: Efficantcy; }
-
-.The-Stats { grid-area: The-Stats; }
-
-.txt {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  gap: 0px 0px;
-  grid-template-areas:
-    "tai"
-    "nin"
-    "buki"
-    "stam"
-    "ele"
-    "gen"
-    "atk"
-    "strike"
-    "hit"
-    "reroll"
-    "focus"
-    "focus-burst"
-    "focus-range"
-    "boost"
-    "buki-rec"
-    "gen-act"
-    "gen-mastery"
-    "gen-rec"
-    "endu";
-  grid-area: txt;
-}
-
-.tai { grid-area: tai; }
-
-.nin { grid-area: nin; }
-
-.buki { grid-area: buki; }
-
-.stam { grid-area: stam; }
-
-.ele { grid-area: ele; }
-
-.gen { grid-area: gen; }
-
-.atk { grid-area: atk; }
-
-.strike { grid-area: strike; }
-
-.hit { grid-area: hit; }
-
-.reroll { grid-area: reroll; }
-
-.focus { grid-area: focus; }
-
-.focus-burst { grid-area: focus-burst; }
-
-.focus-range { grid-area: focus-range; }
-
-.boost { grid-area: boost; }
-
-.buki-rec { grid-area: buki-rec; }
-
-.gen-act { grid-area: gen-act; }
-
-.gen-mastery { grid-area: gen-mastery; }
-
-.gen-rec { grid-area: gen-rec; }
-
-.endu { grid-area: endu; }
-
 .input-containers {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 100%;
+  grid-template-rows: 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% 5.263% ;
   gap: 0px 0px;
   grid-template-areas:
     "s01"
@@ -360,7 +483,8 @@
     "s16"
     "s17"
     "s18"
-    "s19";
+    "s19"
+    "s20";
   grid-area: input-containers;
 }
 
@@ -402,167 +526,83 @@
 
 .s19 { grid-area: s19; }
 
-.Stats {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 0px 0px;
-  grid-area: Stats;
-}
-
-.Primestat-containers {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 0px 0px;
-  grid-template-areas:
-    ". . ."
-    ". . .";
-  grid-area: 1 / 1 / 2 / 2;
-}
-
-.StatNames { grid-area: 1 / 1 / 2 / 2; }
-
-.Secondary-containers {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  gap: 0px 0px;
-  grid-template-areas:
-    "Atk"
-    "Strike"
-    "Hit"
-    "Reroll"
-    "Focus"
-    "Focus-Burst"
-    "Focus-Range"
-    "Buki-boost"
-    "Buki-rec"
-    "Gen-act"
-    "Gen-mastery"
-    "Gen-rec"
-    "Endu"
-    ".";
-  grid-area: 2 / 1 / 3 / 2;
-}
-
-.Atk { grid-area: Atk; }
-
-.Strike { grid-area: Strike; }
-
-.Hit { grid-area: Hit; }
-
-.Reroll { grid-area: Reroll; }
-
-.Focus { grid-area: Focus; }
-
-.Focus-Burst { grid-area: Focus-Burst; }
-
-.Focus-Range { grid-area: Focus-Range; }
-
-.Buki-boost { grid-area: Buki-boost; }
-
-.Buki-rec { grid-area: Buki-rec; }
-
-.Gen-act { grid-area: Gen-act; }
-
-.Gen-mastery { grid-area: Gen-mastery; }
-
-.Gen-rec { grid-area: Gen-rec; }
-
-.Endu { grid-area: Endu; }
+.s20 { grid-area: s20; }
 
 .Dmgout-containers {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
   gap: 0px 0px;
   grid-template-areas:
-    "r21 dmg"
-    "crittrange crittdmg";
+    "r21 DMG"
+    "Crit-DMG-Tag Critt-DMG-Out";
   grid-area: Dmgout-containers;
 }
-
 .r21 {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 100%;
+  grid-template-rows: 50% 50%;
   gap: 0px 0px;
   grid-template-areas:
-    "avrdmg"
+    "AvrageDMG"
     "D-R";
   grid-area: r21;
 }
-
-.avrdmg { grid-area: avrdmg; }
-
+.AvrageDMG { grid-area: AvrageDMG; }
 .D-R { grid-area: D-R; }
-
-.dmg {
+.DMG {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 100%;
+  grid-template-rows: 50% 49%;
   gap: 0px 0px;
   grid-template-areas:
-    "Dmgran"
-    "lowhigh";
-  grid-area: dmg;
+    "AvrageDMG-out"
+    "Low-High-DMG";
+  grid-area: DMG;
 }
-
-.Dmgran { grid-area: Dmgran; }
-
-.lowhigh {
+.AvrageDMG-out { grid-area: AvrageDMG-out; }
+.Low-High-DMG {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 100%;
   gap: 0px 0px;
   grid-template-areas:
-    "low-dmg high-dmg";
-  grid-area: lowhigh;
+    "Low-DMG High-DMG";
+  grid-area: Low-High-DMG;
 }
-
-.low-dmg { grid-area: low-dmg; }
-
-.high-dmg { grid-area: high-dmg; }
-
-.crittrange {
+.Low-DMG { grid-area: Low-DMG; }
+.High-DMG { grid-area: High-DMG; }
+.Crit-DMG-Tag {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 100%;
+  grid-template-rows: 50% 50%;
   gap: 0px 0px;
   grid-template-areas:
-    "avrdmgcritt"
-    "dmg-rng-critt";
-  grid-area: crittrange;
+    "Average-DMG-on-Crit"
+    "Damage-Range-with-Critical-Hit";
+  grid-area: Crit-DMG-Tag;
 }
-
-.avrdmgcritt { grid-area: avrdmgcritt; }
-
-.dmg-rng-critt { grid-area: dmg-rng-critt; }
-
-.crittdmg {
+.Average-DMG-on-Crit { grid-area: Average-DMG-on-Crit; }
+.Damage-Range-with-Critical-Hit { grid-area: Damage-Range-with-Critical-Hit; }
+.Critt-DMG-Out {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 100%;
+  grid-template-rows: 49% 50%;
   gap: 0px 0px;
   grid-template-areas:
-    "avrcrit-dmg"
+    "Average-DMG-on-Crit-Out"
     "lowcrit-higcritt";
-  grid-area: crittdmg;
+  grid-area: Critt-DMG-Out;
 }
-
-.avrcrit-dmg { grid-area: avrcrit-dmg; }
-
+.Average-DMG-on-Crit-Out { grid-area: Average-DMG-on-Crit-Out; }
 .lowcrit-higcritt {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 100%;
   gap: 0px 0px;
   grid-template-areas:
-    "low-critt high-critt";
+    "Low-critt-DMG High-critt-DMG";
   grid-area: lowcrit-higcritt;
 }
-
-.low-critt { grid-area: low-critt; }
-
-.high-critt { grid-area: high-critt; }
+.Low-critt-DMG { grid-area: Low-critt-DMG; }
+.High-critt-DMG { grid-area: High-critt-DMG; }
